--- a/www/index.html
+++ b/www/index.html
@@ -11,5 +11,6 @@
 		<input type="button" onclick="deviceInfo()" value="Let me introduce myself!">
 		<input type="button" onclick="jaInfo()" value="Info o mnie!">
 		<input type="button" onclick="checkConnection()" value="Net">
+		<input type="button" onclick="onSuccess()" value="Czy sie rusza">
 	</body>
 </html>
